# D3D11On12

./: CMakeLists.txt
include/: DeviceChild.hpp  PipelineStateCache.hpp  Shader.hpp  Shader.inl  VideoDecode.hpp  VideoTranslate.hpp  device.hpp  pch.hpp  view.hpp
include/atl/: atlbase.h  atlcore.h
include/winddk/: .gitignore
src/: CMakeLists.txt  VideoDecode.cpp  VideoDevice.cpp  adapter.cpp  context.cpp  device.cpp  main.cpp  shader.cpp
